assets/scss/main.scss
/* ... */
@font-face {
  font-family: 'Open Sans Bold';
  src: url('../fonts/OpenSans-Bold.ttf');
}


@font-face {
  font-family: 'Open Sans Extra Bold';
  src: url("../fonts/OpenSans-ExtraBold.ttf");
}


@font-face {
  font-family: 'Open Sans Regular';
  src: url('../fonts/OpenSans-Regular.ttf');
}


html, body {
  height: auto;
  min-height: 100%;
  width: 100%;
  font-family: "Open Sans",sans-serif;
  position: relative;
  /*
  overflow: auto;
  */


  @include themify($themes) {
    color: themed('textColor');
    background-color: themed('backgroundColor');
  }

  //all page backgroung
  //background-color:red;
  //color:greenyellow;

}

body {
  border-top: 4px solid royalblue;
}

.modal-title{
  &.mobile-dialog{
    font-size: 1rem;
  }

}

.modal-header.d-block {
  border: none !important;
}

.modal-dialog {
  &.tips-dialog, &.filter-dialog {
    position: relative;
  }
}

.modal.vertically-modal {
  .modal-dialog {
    transform: translateY(-25%);
    top: 50%;
    margin: 0 auto;
  }
  &.show .modal-dialog {
    transform: translateY(-50%);
  }
}

.modal-content {

  /*
  max-height: 100vh;
  max-height: 100vw;

  max-height: calc(90vh);
  max-width: calc(70vw);
  */
  overflow-x: auto;
  overflow-y: auto;
  padding: 40px;
}

.modal-lg {
  max-width: 870px;
}

.modal-content-tab-panel {
  max-height: calc(40vh);
  max-width: calc(60vw);
  overflow-x: auto;
  overflow-y: auto;
  padding: 10px;
}

.container-inline-flex {
  display: inline-flex;
  flex-direction: row;
  flex-wrap: wrap;
  max-width: 870px;
  padding: 10px;
  margin: 20px;
  overflow-x: auto;
}

.box2 {
  width: 200px;
  height: 200px;
  margin: 10px;
  text-overflow: ellipsis;
  white-space: nowrap;
}


.container-fluid {
  padding: 0;
}

.container-fluid,
.header, .footer-content, .cookies-cont, .modal-content, .collection-heading, .collection-heading-bold, .list-group-item, .homepage-search-input,
.no-result-row, .ukwa-form-field,  .search-tips-row, .not-available-row, .error-500-row,
.main-search-field-redesign, .searchpage_search_bg_settings, .search-no-results, .pagination-number-redesign, .sidebar-filter-header, .checkbox-sidebar, .radio-sidebar, .date-sidebar, .sidebar-clear-filter-button,
.q-description, .q-grid, .technical-code,
.results-container,
.breadcrumb, .results-count, .topics-themes-description,
.modal-content-tab-panel, .main-search-check-label,
.breadcrumb-item,
.label-for-accessibility-placeholder{
  @include themify($themes) {
    color: themed('textColor');
    background-color: themed('backgroundColor');
  }
}

.nominate-result-row{
  @include themify($themes) {
    color: themed('nominate-result-row-color');
    background-color: themed('nominate-result-row-bg');
  }
}

.search-tips-href{
  @include themify($themes) {
    color: themed('search-tips-href-text-color') !important;
    background-color: themed('search-tips-href-bg') !important;
  }
}

.search-results-main-heading{
  @include themify($themes) {
    color: themed('search-results-main-heading-text-color');
    background-color: themed('search-results-main-heading-bg-color');
  }
}

.ukwa-form-button{
  @include themify($themes) {
    color: themed('ukwa-form-button-text-color');
    background-color: themed('ukwa-form-button-bg');
  }
}

.ukwa-form-field-info{
  @include themify($themes) {
    color: themed('ukwa-form-field-info-textColor');
    background-color: themed('backgroundColor');
  }
}


.ukwa-form-button {
    @include themify($themes) {
      color: themed('ukwa-form-button-color');
      background-color: themed('ukwa-form-button-bg');
    }
  }

.nav-tabs--vertical {
  border-bottom: none;
  border-right: 1px solid #ddd;
  display: flex;
  flex-flow: column nowrap;
  align-items: stretch;
}

.nav-tabs--left {
  margin: 0 15px;
  .nav-item + .nav-item {
    margin-top: .25rem;
  }
  .nav-link {
    transition: border-color 125ms ease-in;
    white-space: nowrap;
    &:hover {
      @include themify($themes) {
        color: themed('textColor');
        background-color: themed('invertedTextColor');
      }
      border-color: transparent;
    }
    &.active {
      border-bottom-color: #ddd;
      border-right-color: #fff;
      border-bottom-left-radius: .25rem;
      border-top-right-radius: 0;
      margin-right: -1px;
      &:hover {
        @include themify($themes) {
          color: themed('textColor');
          background-color: themed('invertedTextColor');
        }
        border-color: #0275d8 #fff #0275d8 #0275d8;
      }
    }
  }
}

.clearable {
  position: relative;
  color: darkgray;
  background: #fff url(data:image/gif;base64,R0lGODlhBwAHAIAAAP///5KSkiH5BAAAAAAALAAAAAAHAAcAAAIMTICmsGrIXnLxuDMLADs=) no-repeat right -10px center;
  border: 1px solid #999;
  padding: 3px 18px 3px 4px;
  border-radius: 3px;
  &.x {
    background-position: right 5px center;
  }
  &.onX {
    cursor: pointer;
  }
  &::-ms-clear {
    display: none;
    width: 0;
    height: 0;
  }
}

input, button, textarea, select {
  font-family: "Open Sans",sans-serif !important;
}

:focus {
  outline-color: red !important;
  outline-width: 2px !important;
  outline-style: solid !important;
}

p.searchFilter {
  font-family: "Open Sans Regular",sans-serif,Arial;
  display: inline-block;
  margin-top: 2px;
  margin-bottom: 2px;
  padding: 5px;
  padding-right: 20px;

  @include themify($themes) {
    color: themed('searchFilterTextColor');
    border: themed('searchFilterBorder');
    background-color: themed('backgroundColor');
  }
}

.anotherpolicy {
  font-family: "Open Sans Bold",sans-serif;
  font-size: 1.8rem;
  line-height: 2rem;
  display: inline-block;

  span {
    font-family: "Open Sans",sans-serif;
    font-size: 1rem;
    font-weight: normal;
    line-height: 1rem !important;

    &::before {
      content: "\A";
      white-space: pre;
    }
    &::after {
      white-space: pre-wrap;
      content: "\A";
    }

  }
}
/* ... */

